# tensor-visualizer

./: .gitignore  .prettierrc  ACKNOWLEDGEMENTS  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  pyproject.toml  tsconfig.json  vite.config.ts
examples/: Basic.ipynb  Resnet.ipynb  TransformerAttention.ipynb
src/demo/: App.svelte  app.ts
src/lib/: index.ts
src/lib/components/: TensorSlicer.svelte  TensorSlicerDisplay.svelte
src/lib/components/heatmap/: Heatmap.svelte  HeatmapCanvas.svelte  HeatmapLabelDisplay.svelte  HeatmapLegend.svelte  index.ts  renderer.ts
src/lib/utils/: Tensor.ts  color_schemes.ts  text_measurements.ts
src/lib/widgets/: TensorVisualizer.svelte  TensorVisualizerAnywidget.ts
src/tensor_visualizer/: __init__.py  tensor_visualizer.py
